maybe fix IE and Edge issues, fix some other alignment problems #733 #735

--- a/web/themes/quartiers_solidaires/assets/components/helpers.scss
+++ b/web/themes/quartiers_solidaires/assets/components/helpers.scss
@@ -92,6 +92,14 @@
   }
 }
 
+@include ie11('.sticky-bottom') {
+  position: relative;
+}
+
+@include ie11('.sticky-top') {
+  position: relative;
+}
+
 // We need a small fix for some cases where the height of a content
 // inside a flex wrapper is not calculated correctly.
 .min-height-0 {
