--- a/web/themes/quartiers_solidaires/assets/components/molecules/nav/nav.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/nav/nav.scss
@@ -225,7 +225,7 @@
     );
 
     &:after {
-      height: 90%;
+      height: 80%;
 
       @include transition(height 0.34s ease-out);
     }
